force-app/main/default/objects/sked_Site_Collection_Operation__c/sked_Site_Collection_Operation__c.object-meta.xml
<CustomObject>
    <label>Site Collection Operation</label>
    <nameField>
        <displayFormat>SCO-{000000}</displayFormat>
        <label>Site Collection Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Collection Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>