force-app/main/default/objects/sked_Site_Collection_Operation__c/fields/sked_Post_Migration_Processed__c.field-meta.xml
<CustomField>
    <fullName>sked_Post_Migration_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Migration Processed</label>
    <type>Checkbox</type>
</CustomField>