force-app/main/default/objects/sked_Site_Collection_Operation__c/fields/sked_Travel_Time_Breakdown_JSON_2__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Breakdown_JSON_2__c</fullName>
    <inlineHelpText>Travel Time from Site</inlineHelpText>
    <label>Travel Time Breakdown JSON 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>