force-app/main/default/objects/sked_Site_Collection_Operation__c/fields/sked_Travel_Time_Index_CO2Site__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Index_CO2Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for HRP-12424</description>
    <label>Travel Time Index CO2Site</label>
    <referenceTo>sked_Travel_Time_Index_Item__c</referenceTo>
    <relationshipLabel>Site Collection Operations (Travel Time Index CO2Site)</relationshipLabel>
    <relationshipName>Site_Collection_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>