force-app/main/default/objects/sked_Site_Collection_Operation__c/fields/sked_Travel_Time_Index_Site2CO__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Index_Site2CO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Modified for HRP-12424</description>
    <label>Travel Time Index Site2CO</label>
    <referenceTo>sked_Travel_Time_Index_Item__c</referenceTo>
    <relationshipLabel>Site Collection Operations (Travel Time Index Site2CO)</relationshipLabel>
    <relationshipName>sked_Site_Collection_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>