force-app/main/default/objects/sked_Site_Collection_Operation__c/fields/sked_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Unique_Key__c</fullName>
    <formula>sked_Collection_Operation__c + &#39;:&#39; + sked_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>