force-app/main/default/objects/sked_Site_Collection_Operation__c/fields/sked_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>sked_UniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>