force-app/main/default/objects/sked_Site_Collection_Operation__c/fields/User_Override__c.field-meta.xml
<CustomField>
    <fullName>User_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Override</label>
    <type>Checkbox</type>
</CustomField>