force-app/main/default/objects/sked_Site_Collection_Operation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>sked_Site__c</columns>
    <columns>sked_Start_Date__c</columns>
    <columns>sked_End_Date__c</columns>
    <columns>sked_Travel_Distance_1__c</columns>
    <columns>sked_Travel_Distance_2__c</columns>
    <columns>sked_Travel_Time_Breakdown_JSON__c</columns>
    <columns>sked_Travel_Time_Breakdown_JSON_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>